# ddtank-tauri

./: index.html  package-lock.json  package.json  prettier.config.cjs  tsconfig.json  vite.config.ts
public/: mouse_tracking.riv
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/app/: main.tsx
src/app/components/routes/: protected-route.tsx
src/app/components/ui/: button.tsx  form.tsx  icons.tsx  label.tsx  rive-component.tsx  select.tsx  toast.tsx
src/app/layouts/: auth-layout.tsx  layout.tsx
src/app/libs/: fonts.ts
src/app/pages/login/: page.tsx
src/app/pages/login/components/: user-login-form.tsx
src/app/pages/register/: page.tsx
src/app/pages/register/components/: user-register-form.tsx
src/app/pages/servers/: page.tsx
src/app/pages/servers/components/: server-selection-form.tsx
src/app/providers/: auth-provider.tsx  toast-provider.tsx
src/app/stores/: auth.store.ts
src/app/stores/effects/: persist.effect.ts
src/app/styles/: global.css
src/core/api/: index.ts
src/core/api/gateways/auth/: auth.dto.ts  auth.gateway.ts
src/core/entities/: user-token.ts
src/core/services/: auth.service.ts
